--- a/package.json
+++ b/package.json
@@ -39,8 +39,12 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://github.com/khalatevarun/react-filejump.git"
     },
+    "bugs": {
+        "url": "https://github.com/khalatevarun/react-filejump/issues"
+    },
+    "homepage": "https://github.com/khalatevarun/react-filejump#readme",
     "peerDependencies": {
         "react": ">=16.8.0"
     },
